# survey-chatbot-api

./: .gitignore  README.md  docker-compose.yml  instructions.md
backend/: .flake8  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: common_responses.py  config.py  constants.py  exceptions.py  logging.py
backend/app/dependencies/: database.py  redis.py  repositories.py  services.py
backend/app/models/: responses.py  sessions.py  surveys.py  types.py
backend/app/repositories/: __init__.py  responses_repository.py  session_repository.py  surveys_repository.py
backend/app/repositories/redis/: __init__.py  session_redis_repository.py
backend/app/routers/: __init__.py  chats_router.py  health_router.py  surveys_router.py
backend/app/services/: chats_service.py  response_service.py  session_service.py  survey_service.py
backend/tests/models/: test_surveys.py
backend/tests/services/: test_chats_service.py  test_response_service.py
backend/tests/utils/: mock_fixtures.py
e2e/: connectly_survey_api.postman_collection.json
